--- a/shop.html
+++ b/shop.html
@@ -31,7 +31,7 @@
     </div>
 
 
-    <main class="out-frame w-[100%] flex gap-x-[1%] my-[30px]">
+    <main class="out-frame w-[100%] flex flex-col md:flex-row gap-x-[1%] my-[30px]">
         <section class="cart_content w-[100%] md:w-[66%]">
             <h2 class="py-[16px] text-[24px] text-[#3F5D45] text-center bg-[#EAF0ED]">您的購物車</h2>
             <ul class=" px-[30px] md:p-0 mt-[30px] flex flex-col gap-y-[30px] ">
@@ -109,19 +109,19 @@
             </ul>
         </section>
 
-        <section class="cart_right w-[33%] hidden md:block">
-            <div class="cart_right_content pb-4 px-5 bg-[#3F5D45]">
-                <h2 class="text-[#EAF0ED] py-4 text-[24px] text-center">訂單摘要</h2>
+        <section class="cart_right w-[100%] md:w-[33%]">
+            <div class="cart_right_content pb-4 px-5 bg-[white] md:bg-[#3F5D45]">
+                <h2 class="text-[#3F5D45] md:text-[#EAF0ED] py-4 text-[24px] text-center bg-[#EAF0ED] md:bg-[#3F5D45]">訂單摘要</h2>
                 <ul class="cart_right_list py-4">
-                    <li class="text-[#EAF0ED] flex justify-between">
+                    <li class="text-[#3F5D45] md:text-[#EAF0ED] flex justify-between">
                         <p>小計</p>
                         <p>NT$ 2,700</p>
                     </li>
-                    <li class="text-[#EAF0ED] flex justify-between pt-2 pb-4">
+                    <li class="text-[#3F5D45] md:text-[#EAF0ED] flex justify-between pt-2 pb-4">
                         <p>運費</p>
                         <p>NT$ 300</p>
                     </li>
-                    <li class="text-[#EAF0ED] flex justify-between text-[20px]">
+                    <li class="text-[#3F5D45] md:text-[#EAF0ED] flex justify-between text-[20px]">
                         <p>總計</p>
                         <p>NT$ 3,000</p>
                     </li>
