--- a/transport.html
+++ b/transport.html
@@ -31,8 +31,8 @@
         </header>
     </div>
 
-    <main class="out-frame w-[100%] md:px-[80px] flex md:py-[65px] md:gap-x-[20px]">
-        <section class="transport_form bg-[#3F5D45] w-[100%] min-[920px]:w-[59%] h-[596px]">
+    <main class="out-frame w-[100%] md:px-[80px] flex py-0 min-[920px]:py-[65px] md:gap-x-[20px]">
+        <section class="transport_form bg-[#3F5D45] w-[100%] min-[920px]:w-[59%] flex flex-col justify-end">
             <div class="form_head flex justify-between px-10 pt-[30px]">
                 <h2 class="text-[#EAF0ED] text-[36px] ">運送</h2>
                 <ul class="timeline">
