--- a/invoice.html
+++ b/invoice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>付款</title>
+    <title>發票頁面</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./src/output.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
@@ -182,7 +182,7 @@
 <script>
       const timelineState = document.querySelectorAll('.timeline_state')
         const timelineItem = document.querySelectorAll('.timeline__item')
-        const payBtn = document.querySelector('.form-button')
+        const payBtn = document.querySelector('.payment_button')
 
         const paystate = 'pay'
 
