--- a/transport.html
+++ b/transport.html
@@ -33,7 +33,7 @@
 
     <main class="out-frame w-[100%] md:px-[80px] flex py-0 min-[920px]:py-[65px] md:gap-x-[20px]">
         <section class="transport_form bg-[#3F5D45] w-[100%] min-[920px]:w-[59%] flex flex-col justify-end">
-            <div class="form_head flex justify-between px-10 pt-[30px]">
+            <div class="form_head flex justify-between px-5 min-[376px]:px-10 pt-[30px] ">
                 <h2 class="text-[#EAF0ED] text-[36px] ">運送</h2>
                 <ul class="timeline">
                     <li class="timeline__item ">
@@ -48,7 +48,7 @@
                 </ul>
             </div>
 
-            <form class="form_content p-[30px] flex flex-col gap-y-4">
+            <form class="form_content px-5 py-[30px] min-[376px]:px-[30px] flex flex-col gap-y-4">
                 <div class="form_userName flex gap-x-[10px]">
                     <div class="user_lastName flex flex-col flex-1">
                         <label class="text-[20px] text-[#EAF0ED] mb-2" for="last">姓氏</label>
