--- a/payment.html
+++ b/payment.html
@@ -37,7 +37,7 @@
                 <h2 class="text-[36px] text-[#EAF0ED]">付款</h2>
                 <ul class="timeline">
                     <li class="timeline__item finishState bg-[#EAF0ED]">
-                        <p class="timeline_state bg-[EAF0ED]"></p>
+                        <p class="timeline_state"></p>
                     </li>
                     <li class="timeline__item">
                         <p class="timeline_state doingState"></p>
