--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 
 <body>
     <div class="container out-container">
-        <header class="px-5 md:px-0 header out-frame flex justify-between justify-items-center"></a>
-            <a class="block md:hidden" href=""><img class="nav-left-btn" src="./img/dehaze-24px.png" alt=""></a>
+        <header class="relative px-5 md:px-0 header out-frame flex justify-between justify-items-center"></a>
+            <!-- <a class="block md:hidden" href=""><img class="nav-left-btn" src="./img/dehaze-24px.png" alt=""></a> -->
+            <nav class="ham-nav w-[24px] h-[24px] md:hidden">
+                <label class="ham-label" for="switch"><img class="hover:cursor-pointer" src="./img/dehaze-24px.png"></label><!--漢堡按鈕圖示-->
+                <input class="ham-input" type="checkbox" id="switch"><!--選單開關-->
+                <ul class="absolute top-[60px] ham-menu w-[300px]"><!--選單內容-->
+                    <li class="text-left"><a class="text-[#3F5D45]" href="./index.html">回首頁</a></li>
+                    <li class="text-left"><a class="text-[#3F5D45]" href="./product.html">甜點頁面</a></li>
+                    <li class="text-left"><a class="text-[#3F5D45]" href="./login.html">登入</a></li>
+                </ul>
+            </nav>
+    
             <div>
                 <a href="./"><img class="header-logo-first hidden md:block" src="./img/logo-all-dark.svg" alt=""></a>
                 <a href="./"><img class="header-logo h-[18px] block md:hidden" src="./img/logotype-sm-dark.svg" alt=""></a>
@@ -26,7 +36,6 @@
                 <a href="./shop.html"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
             </div>
         </header>
-
         <main>
             <div class="main-img"></div>
             <ul class="out-frame three-box md:mt-[-80px] md:px-20 flex justify-between items-center">
