登入頁面微調

--- a/login.html
+++ b/login.html
@@ -40,9 +40,9 @@
     </div>
 
     <main class="login-container">
-        <div class="out-container max-w-[100%] flex justify-center py-[60px]">
+        <div class="out-container max-w-[100%] flex justify-center pb-0 md:py-[60px]">
             <div class="login-left md:w-[390px]">
-                <h2 class="text-[36px] text-[white] bg-[#3F5D45] text-center pt-[30px] pb-[10px]">會員登入</h2>
+                <h2 class="text-[36px] text-[white] bg-[#3F5D45] text-center md:pt-[30px] py-[10px]">會員登入</h2>
                 <ul class="pad-logo-view flex md:hidden justify-center items-center p-[30px] bg-[#EAF0ED]">
                     <li class="bg-[white] px-4"> <a class="inline-block"> <img class="w-[100%] h-[56px]" src="./img/ic-facebook-logotype.svg" alt=""> </a> </li>
                     <li class="bg-[white] px-4"> <a class="inline-block"> <img class="w-[100%] h-[56px]" src="./img/ic-google.svg" alt=""> </a> </li>
