購物車底部margin微調

--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
     </div>
 
 
-    <main class="out-frame w-[100%] flex flex-col md:flex-row gap-x-[1%] my-[30px]">
+    <main class="out-frame w-[100%] flex flex-col md:flex-row gap-x-[1%] mb-0 md:my-[30px]">
         <section class="cart_content w-[100%] md:w-[66%]">
             <h2 class="py-[16px] text-[24px] text-[#3F5D45] text-center bg-[#EAF0ED]">您的購物車</h2>
             <ul class=" px-[30px] md:p-0 mt-[30px] flex flex-col gap-y-[30px] ">
