修改了甜點商品border線跟間距

--- a/product.html
+++ b/product.html
@@ -60,9 +60,9 @@
                         <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img1 w-[300px] h-[315px]"></div>
-                        <ul class="flex justify-around">
-                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
-                            <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
+                        <ul class="flex justify-between w-[100%]">
+                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                            <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
@@ -71,9 +71,9 @@
                         <div class="bottom-card-img2 w-[300px] h-[315px]"></div>
                         <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                        <ul class="flex justify-around">
-                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
-                            <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
+                        <ul class="flex justify-between w-[100%]">
+                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                            <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
@@ -82,9 +82,9 @@
                         <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img3 w-[300px] h-[315px]"></div>
-                        <ul class="flex justify-around">
-                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
-                            <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
+                        <ul class="flex justify-between w-[100%]">
+                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                            <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
@@ -93,9 +93,9 @@
                         <div class="bottom-card-img4 w-[300px] h-[315px]"></div>
                         <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                        <ul class="flex justify-around">
-                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
-                            <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
+                        <ul class="flex justify-between w-[100%]">
+                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                            <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
@@ -104,9 +104,9 @@
                         <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img5 w-[300px] h-[315px]"></div>
-                        <ul class="flex justify-around">
-                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
-                            <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
+                        <ul class="flex justify-between w-[100%]">
+                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                            <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
@@ -115,9 +115,9 @@
                         <div class="bottom-card-img6 w-[300px] h-[315px]"></div>
                         <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                        <ul class="flex justify-around">
-                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
-                            <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
+                        <ul class="flex justify-between w-[100%]">
+                            <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                            <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
