--- a/product.html
+++ b/product.html
@@ -100,7 +100,7 @@
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>  
-                    <div class="bottom-card-5  min-[940px]:pr-5 relative mb-[20px] m-auto hidden md:block">
+                    <div class="bottom-card-5  min-[568px]:block min-[940px]:pr-5 relative mb-[20px] m-auto hidden md:block">
                         <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img5 w-[300px] h-[315px]"></div>
