修正許多版面配置

--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
         <img class="block md:hidden h-[60px] w-[226px] m-auto my-[30px]" src="./img/home_sm_title3.svg" alt="">
     </div>
 
-    <div class="bottom-card mb-[60px]">
-        <div class="bottom-card-container out-frame flex justify-center m-auto mt-[3%]">
-            <div class="bottom-card-1 min-[568px]:pr-5 relative ">
-                <a href=""><img class="absolute top-[10px] right-[10px] min-[568px]:right-[30px]" src="./img/favorite_border.png" alt=""></a>
+    <div class="bottom-card mb-[60px] mt-[80px]">
+        <div class="bottom-card-container gap-x-5 out-frame flex justify-center m-auto">
+            <div class="bottom-card-1 w-[300px] relative ">
+                <a href=""><img class="absolute top-[16px]  right-[20px] min-[568px]:right-[30px]" src="./img/favorite_border.png" alt=""></a>
                 <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                <div class="bottom-card-img1 w-[300px] h-[315px]"></div>
+                <div class="bottom-card-img1 w-[100%] h-[315px]"></div>
                 <ul class="flex justify-between w-[100%]">
-                    <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
+                    <li class="text-[#3F5D45] font-[P100%ngTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
                     <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
                 </ul>
                 <div
                     class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                     <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
             </div>
-            <div class="bottom-card-2 min-[568px]:pr-5 hidden min-[568px]:block relative">
-                <div class="bottom-card-img2 w-[300px] h-[315px]"></div>
-                <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+            <div class="bottom-card-2 w-[300px] hidden min-[568px]:block relative">
+                <div class="bottom-card-img2 w-[100%] h-[315px]"></div>
+                <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                 <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                 <ul class="flex justify-between w-[100%]">
                     <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
@@ -105,9 +105,9 @@
                     class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                     <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
             </div>
-            <div class="bottom-card-3 hidden min-[940px]:block relative">
-                <div class="bottom-card-img3 w-[300px] h-[315px]"></div>
-                <a><img class="absolute top-[10px] right-[10px]" src="./img/favorite_border.png" alt=""></a>
+            <div class="bottom-card-3 w-[300px] hidden min-[940px]:block relative">
+                <div class="bottom-card-img3 w-[100%] h-[315px]"></div>
+                <a><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                 <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>                
                 <ul class="flex justify-between w-[100%]">
                     <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
