--- a/product.html
+++ b/product.html
@@ -43,9 +43,9 @@
     </div>
 
     <div class="bottom-card mb-[10px]">
-        <div class="bottom-card-container out-frame flex flex-col md:flex-row md:justify-center m-auto mt-[3%]">
+        <div class="bottom-card-container gap-x-5 out-frame flex flex-col md:flex-row md:justify-center m-auto mt-[3%]">
 
-            <div class="bottom-card-left w-[100%] md:w-[300px]  m-0  md:mr-[20px]">
+            <div class="bottom-card-left w-[100%] md:w-[300px]  m-0 ">
                     <h2 class="bg-[#3F5D45] text-[#EAF0ED] h-[65px] flex justify-center items-center text-[24px]">甜點類別</h2>
                     <ul class="text-[24px]">
                         <a href=""><li class="flex justify-center items-center py-[16px] text-[#3F5D45]">所有甜點(48)</li></a>
@@ -54,12 +54,12 @@
                         <a href=""><li class="flex justify-center items-center py-[16px] text-[#3F5D45]">新品上市(12)</li></a>
                     </ul>
             </div>
-                <div class="bottom-card-right flex flex-1 flex-wrap basis-[620px]">
+                <div class="bottom-card-right gap-x-5 flex flex-1 flex-wrap basis-[620px] justify-center">
 
-                    <div class="bottom-card-1 min-[940px]:pr-5 relative mb-[20px] m-auto ">
-                        <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                    <div class="w-[300px] bottom-card-1  relative mb-[20px]">
+                        <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                        <div class="bottom-card-img1 w-[300px] h-[315px]"></div>
+                        <div class="bottom-card-img1 w-[100%] h-[315px]"></div>
                         <ul class="flex justify-between w-[100%]">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
                             <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
@@ -67,9 +67,9 @@
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>
-                    <div class="bottom-card-2 min-[568px]:block relative mb-[20px] m-auto">
-                        <div class="bottom-card-img2 w-[300px] h-[315px]"></div>
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                    <div class="w-[300px] bottom-card-2 min-[568px]:block relative mb-[20px]">
+                        <div class="bottom-card-img2 w-[100%] h-[315px]"></div>
+                        <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <ul class="flex justify-between w-[100%]">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
@@ -78,10 +78,10 @@
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>  
-                    <div class="bottom-card-3 relative min-[940px]:pr-5 mb-[20px] m-auto">
-                        <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                    <div class="w-[300px] bottom-card-3 relative  mb-[20px]">
+                        <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                        <div class="bottom-card-img3 w-[300px] h-[315px]"></div>
+                        <div class="bottom-card-img3 w-[100%] h-[315px]"></div>
                         <ul class="flex justify-between w-[100%]">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
                             <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
@@ -89,9 +89,9 @@
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>
-                    <div class="bottom-card-4 min-[568px]:block relative mb-[20px] m-auto hidden md:block">
-                        <div class="bottom-card-img4 w-[300px] h-[315px]"></div>
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                    <div class="w-[300px] bottom-card-4 min-[568px]:block relative mb-[20px] hidden md:block">
+                        <div class="bottom-card-img4 w-[100%] h-[315px]"></div>
+                        <a href=""><img class="absolute top-[16px] right-[20px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <ul class="flex justify-between w-[100%]">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
@@ -100,10 +100,10 @@
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>  
-                    <div class="bottom-card-5  min-[568px]:block min-[940px]:pr-5 relative mb-[20px] m-auto hidden md:block">
-                        <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                    <div class="w-[300px] bottom-card-5  min-[568px]:block  relative mb-[20px] hidden md:block">
+                        <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
-                        <div class="bottom-card-img5 w-[300px] h-[315px]"></div>
+                        <div class="bottom-card-img5 w-[100%] h-[315px]"></div>
                         <ul class="flex justify-between w-[100%]">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
                             <li class="text-[#3F5D45] text-xl font-[600] w-[42.5%] text-center py-4">NT$450</li>
@@ -111,9 +111,9 @@
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
                             <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>
-                    <div class="bottom-card-6 min-[568px]:block relative mb-[20px] m-auto hidden md:block">
-                        <div class="bottom-card-img6 w-[300px] h-[315px]"></div>
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                    <div class="w-[300px] bottom-card-6 min-[568px]:block relative mb-[20px] hidden md:block">
+                        <div class="bottom-card-img6 w-[100%] h-[315px]"></div>
+                        <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <ul class="flex justify-between w-[100%]">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600] w-[57.5%] text-center py-4 border-middle">焦糖馬卡龍</li>
