--- a/product.html
+++ b/product.html
@@ -42,8 +42,8 @@
         <img class="max-w-[90px] h-[327px]" src="./img/home_ds_title3.svg" alt="">
     </div>
 
-    <div class="bottom-card mb-[10px]">
-        <div class="bottom-card-container gap-x-5 out-frame flex flex-col md:flex-row md:justify-center m-auto mt-[3%]">
+    <div class="bottom-card mb-[10px] md:mt-[60px]">
+        <div class="bottom-card-container gap-x-5 out-frame flex flex-col md:flex-row md:justify-center m-auto">
 
             <div class="bottom-card-left w-[100%] md:w-[300px]  m-0 ">
                     <h2 class="bg-[#3F5D45] text-[#EAF0ED] h-[65px] flex justify-center items-center text-[24px]">甜點類別</h2>
@@ -54,7 +54,7 @@
                         <a href=""><li class="flex justify-center items-center py-[16px] text-[#3F5D45]">新品上市(12)</li></a>
                     </ul>
             </div>
-                <div class="bottom-card-right gap-x-5 flex flex-1 flex-wrap basis-[620px] justify-center">
+                <div class="bottom-card-right gap-x-5 flex flex-1 flex-wrap basis-[620px] justify-center mt-[30px] md:mt-0">
 
                     <div class="w-[300px] bottom-card-1  relative mb-[20px]">
                         <a href=""><img class="absolute top-[16px]  right-[20px]" src="./img/favorite_border.png" alt=""></a>
